# nirix

./: Cargo.toml  LICENSE
crates/apps/navi/: Cargo.toml
crates/apps/navi/src/: main.rs
crates/apps/nirix-portal/: Cargo.toml
crates/apps/nirix-portal/src/: main.rs
crates/apps/nirix-shell/: Cargo.toml
crates/apps/nirix-shell/src/: main.rs
crates/libs/navi-core/: Cargo.toml
crates/libs/navi-core/src/: lib.rs
crates/libs/navi-ui/: Cargo.toml
crates/libs/navi-ui/src/: app.rs  bootstrap.rs  chooser.rs  components.rs  config.rs  lib.rs
crates/libs/navi-ui/src/components/: drag_label.rs  entry_item.rs  entry_list.rs  file_item.rs  mod.rs  navbar.rs
crates/libs/navi-ui/src/screens/: browser.rs
crates/libs/nirix-bar/: Cargo.toml
crates/libs/nirix-bar/src/: app.rs  lib.rs
crates/libs/nirix-portal-backend/: Cargo.toml
crates/libs/nirix-portal-backend/src/: file_chooser_backend.rs  lib.rs  service.rs
crates/libs/nirix-portal-backend/src/file_chooser/: backend.rs  mod.rs  request.rs  response.rs
crates/libs/nirix-portal-core/: Cargo.toml
crates/libs/nirix-portal-core/src/: file_chooser.rs  lib.rs
crates/libs/nirix-wallpaper/: Cargo.toml
crates/libs/nirix-wallpaper/src/: lib.rs
