[workspace]
members = [
    "crates/apps/navi", "crates/libs/navi-ui",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
gpui = "0.2.2"
navi-ui = { path = "crates/libs/navi-ui" }

[profile.dev]
debug = "line-tables-only"
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 16
