[workspace]
members = [
    "crates/apps/navi", "crates/libs/navi-core", "crates/libs/navi-ui",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["wayland"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["wayland"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }

dirs = "6.0.0"

navi-ui = { path = "crates/libs/navi-ui" }
navi-core = { path = "crates/libs/navi-core" }

[profile.dev]
debug = "line-tables-only"
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 16
