[workspace]
members = [
    "crates/apps/navi", "crates/apps/nirix-portal", "crates/libs/navi-core", "crates/libs/navi-ui", "crates/libs/nirix-portal-backend", "crates/libs/nirix-portal-core",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["wayland"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["wayland"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }

dirs = "6.0.0"
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.102"

navi-ui = { path = "crates/libs/navi-ui" }
navi-core = { path = "crates/libs/navi-core" }

nirix-portal-core = { path = "crates/libs/nirix-portal-core" }
nirix-portal-backend = { path = "crates/libs/nirix-portal-backend" }

[profile.dev]
opt-level = 0
debug = "line-tables-only"
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
