[package]
name = "xdg-desktop-portal-nirix"
version = "0.1.0"
edition.workspace = true

[dependencies]
nirix-portal-backend = { workspace = true }
navi-ui = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "xdg-desktop-portal-nirix"
path = "src/main.rs"

[[bin]]
name = "navi-chooser"
path = "src/bin/navi-chooser.rs"